--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.15.0",
     "@types/node": "20.2.4",
-    "@types/react": "18.2.7",
+    "@types/react": "^18.2.20",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.6.0",
@@ -33,6 +33,6 @@
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.5",
-    "typescript": "5.0.4"
+    "typescript": "^5.1.6"
   }
 }
