--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.15.0",
+    "@stripe/stripe-js": "^2.1.0",
     "@types/node": "20.2.4",
     "@types/react": "^18.2.20",
     "@types/react-dom": "18.2.4",
@@ -42,6 +43,7 @@
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
     "sanity": "^3.15.0",
+    "stripe": "^13.2.0",
     "styled-components": "5.2",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.2",
