--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "sanity": "^3.15.0",
     "stripe": "^13.2.0",
     "styled-components": "5.2",
+    "swiper": "^10.2.0",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.5",
